syntax = "proto3";

import "hq/dto/Security.proto";
option java_package = "com.huasheng.quant.open.sdk.protobuf.hq.request.subscriber";
option java_outer_classname = "PushunsubscribeRequestProto";
message PushunsubscribeRequest {
	int32 topicId = 1;
	repeated Security security = 2;
}
